--- a/Pendue/pendue.html
+++ b/Pendue/pendue.html
@@ -13,6 +13,7 @@
 <main>
 <div class="container">
     <h1>Voici mon pendue</h1>
+    <button id="Start">Changer de mot</button>
     <div class="row">
         <button class="rond">A</button>
         <button class="rond">B</button>
