Pendue Image manquante

--- a/Pendue/pendue.html
+++ b/Pendue/pendue.html
@@ -15,35 +15,36 @@
     <h1>Voici mon pendue</h1>
     <button id="Start">Changer de mot</button>
     <div class="row">
-        <button class="rond">A</button>
-        <button class="rond">B</button>
-        <button class="rond">C</button>
-        <button class="rond">D</button>
-        <button class="rond">E</button>
-        <button class="rond">F</button>
-        <button class="rond">G</button> 
-        <button class="rond">H</button>
-        <button class="rond">I</button>
-        <button class="rond">J</button>
-        <button class="rond">K</button>
-        <button class="rond">L</button>
-        <button class="rond">M</button>
+        <button class="rond"value="a">A</button>
+        <button class="rond"value="b">B</button>
+        <button class="rond"value="c">C</button>
+        <button class="rond"value="d">D</button>
+        <button class="rond"value="e">E</button>
+        <button class="rond"value="f">F</button>
+        <button class="rond"value="g">G</button> 
+        <button class="rond"value="h">H</button>
+        <button class="rond"value="i">I</button>
+        <button class="rond"value="j">J</button>
+        <button class="rond"value="k">K</button>
+        <button class="rond"value="l">L</button>
+        <button class="rond"value="m">M</button>
     </div>
     <div class="row">
-        <button class="rond">N</button>
-        <button class="rond">O</button>
-        <button class="rond">P</button>
-        <button class="rond">Q</button>
-        <button class="rond">R</button>
-        <button class="rond">S</button>
-        <button class="rond">T</button>
-        <button class="rond">U</button>
-        <button class="rond">V</button>
-        <button class="rond">W</button>
-        <button class="rond">X</button>
-        <button class="rond">Y</button>
-        <button class="rond">Z</button> 
+        <button class="rond"value="n">N</button>
+        <button class="rond"value="o">O</button>
+        <button class="rond"value="p">P</button>
+        <button class="rond"value="q">Q</button>
+        <button class="rond"value="r">R</button>
+        <button class="rond"value="s">S</button>
+        <button class="rond"value="t">T</button>
+        <button class="rond"value="u">U</button>
+        <button class="rond"value="v">V</button>
+        <button class="rond"value="w">W</button>
+        <button class="rond"value="x">X</button>
+        <button class="rond"value="y">Y</button>
+        <button class="rond"value="z">Z</button> 
     </div>
+    <div id="MtAtrv"></div>
 </div>
 
 
@@ -63,7 +64,7 @@
 
 
 
-
+    <script src="./js/liste_francais.js"></script>
     <script src="./js/pendue.js"></script>
 </body>
 </html>
